tests/baselines/reference/unicodeExtendedEscapesInTemplates19_ES6.errors.txt
//// [tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates19_ES6.ts] ////

unicodeExtendedEscapesInTemplates19_ES6.ts(1,13): error TS1125: Hexadecimal digit expected.


==== unicodeExtendedEscapesInTemplates19_ES6.ts (1 errors) ====
    var x = `\u{}`;
                
!!! error TS1125: Hexadecimal digit expected.
    